[gd_scene load_steps=11 format=3 uid="uid://o0equu1tyr4s"]

[ext_resource type="Script" path="res://core/ui/components/expandable_card.gd" id="1_63a7d"]
[ext_resource type="PackedScene" uid="uid://c5sfkhrfbao71" path="res://core/systems/effects/play_audio_effect.tscn" id="2_mur57"]
[ext_resource type="PackedScene" uid="uid://bw8113ocotx2r" path="res://core/systems/effects/fade_effect.tscn" id="3_wiryf"]
[ext_resource type="PackedScene" uid="uid://hbgypx7p3gyw" path="res://core/systems/effects/grower_effect.tscn" id="4_b75le"]
[ext_resource type="PackedScene" uid="uid://uljtdvmuol3l" path="res://core/systems/input/focus_group_setter.tscn" id="5_3aqkt"]
[ext_resource type="PackedScene" uid="uid://d0u3rsa5qpj57" path="res://core/ui/components/subsection_label.tscn" id="6_cxawo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptn26"]
resource_local_to_scene = true
bg_color = Color(0.105882, 0.109804, 0.141176, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Gradient" id="Gradient_2e33l"]
colors = PackedColorArray(0.741176, 0.576471, 0.976471, 1, 1, 0.47451, 0.776471, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_quvnw"]
gradient = SubResource("Gradient_2e33l")
fill = 1
fill_to = Vector2(1, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sh8jt"]
bg_color = Color(0.156863, 0.164706, 0.211765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ExpandableCard" type="PanelContainer"]
clip_children = 2
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 51.0
grow_horizontal = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ptn26")
script = ExtResource("1_63a7d")

[node name="PlayFocusAudioEffect" parent="." instance=ExtResource("2_mur57")]
on_signal = "focus_entered"

[node name="PlaySelectedAudioEffect" parent="." instance=ExtResource("2_mur57")]
audio = "res://assets/audio/interface/select_002.ogg"
on_signal = "pressed"

[node name="HighlightFadeEffect" parent="." node_paths=PackedStringArray("target") instance=ExtResource("3_wiryf")]
target = NodePath("../HighlightTexture")
on_signal = "focus_entered"
fade_out_signal = "nonchild_focused"
on_signal = "focus_entered"

[node name="GrowerEffect" parent="." node_paths=PackedStringArray("target", "content_container", "inside_panel", "separator") instance=ExtResource("4_b75le")]
target = NodePath("..")
content_container = NodePath("../MarginContainer/CardVBoxContainer/ContentContainer")
inside_panel = NodePath("../InsidePanelMargin/InsidePanel")
separator = NodePath("../MarginContainer/CardVBoxContainer/HSeparator")
on_signal = "toggled_on"
shrink_signal = "toggled_off"
on_signal = "toggled_on"

[node name="FocusGroupSetter" parent="GrowerEffect" instance=ExtResource("5_3aqkt")]
unique_name_in_owner = true
on_signal = "effect_finished"

[node name="HighlightTexture" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = SubResource("GradientTexture2D_quvnw")
expand_mode = 1
stretch_mode = 6

[node name="InsidePanelMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="InsidePanel" type="Panel" parent="InsidePanelMargin"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sh8jt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="CardVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SectionLabel" parent="MarginContainer/CardVBoxContainer" instance=ExtResource("6_cxawo")]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/CardVBoxContainer"]
visible = false
layout_mode = 2

[node name="ContentContainer" type="VBoxContainer" parent="MarginContainer/CardVBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
